--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,4 @@ JWT_SECRET = "laksdjaldskjflksjdfo3u598327u90u3"
 JWT_EXPIRES = "2d"
 COOKIE_EXPIRES = 2
 
-CLIENT_URL = "http://localhost:5173"
+CLIENT_URL = "https://chat-app-red-zeta.vercel.app"
