--- a/client/.env
+++ b/client/.env
@@ -1,7 +1,2 @@
-VITE_DB_URL = "https://chat-app-x5jg.vercel.app/api/v1"
-
-VITE_DB_ORIGIN = "https://chat-app-x5jg.vercel.app"
-
-
-
-
+VITE_DB_URL = "http://localhost:5000/api/v1"
+VITE_DB_ORIGIN = "http://localhost:5000"
