--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ MONGODB_URL="mongodb+srv://racedead77_db_user:FI4yeCJUskrcyuAM@cluster0.kynhzuz.
 JWT_SECRET = "laksdjaldskjflksjdfo3u598327u90u3"
 JWT_EXPIRES = "2d"
 COOKIE_EXPIRES = 2
-CLIENT_URL = "http://localhost:5173"
+CLIENT_URL = "https://chat-app-lyart-eta-77.vercel.app"
