--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ MONGODB_URL="mongodb+srv://racedead77_db_user:FI4yeCJUskrcyuAM@cluster0.kynhzuz.
 JWT_SECRET = "laksdjaldskjflksjdfo3u598327u90u3"
 JWT_EXPIRES = "2d"
 COOKIE_EXPIRES = 2
+CLIENT_URL = "https://chat-app-if9p.vercel.app"
